[gd_scene load_steps=7 format=3 uid="uid://crdl8agak46vc"]

[ext_resource type="ButtonGroup" uid="uid://br67tpuxndf8k" path="res://scenes/ui/shop_item_button_group.tres" id="1_xpxdn"]
[ext_resource type="Script" path="res://scripts/ui/shop_item.gd" id="2_6utqj"]
[ext_resource type="Texture2D" uid="uid://d4dm0nxcgkb47" path="res://textures/sprites/preview-tower-large.png" id="3_tgn15"]
[ext_resource type="Texture2D" uid="uid://bblxo40qljca8" path="res://textures/ui/golden-fish.png" id="4_r72g2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_23uga"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vev1f"]
bg_color = Color(0.779809, 0, 0.332922, 0.287)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="ShopItem" type="Button"]
custom_minimum_size = Vector2(748, 128)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"BorderButton"
toggle_mode = true
button_group = ExtResource("1_xpxdn")
script = ExtResource("2_6utqj")

[node name="ImageContainer" type="PanelContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -61.5
offset_right = 200.0
offset_bottom = 61.5
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_23uga")

[node name="Image" type="TextureRect" parent="ImageContainer"]
layout_mode = 2
texture = ExtResource("3_tgn15")
expand_mode = 1
stretch_mode = 3

[node name="NameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 216.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = 75.0
grow_horizontal = 2
text = "Tower Segment (Large)"
autowrap_mode = 2

[node name="PriceLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 83.0
offset_right = 384.0
offset_bottom = 111.0
text = "100"

[node name="Golden-fish" type="Sprite2D" parent="."]
position = Vector2(232, 96)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_r72g2")

[node name="UnavailableOverlay" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vev1f")

[connection signal="toggled" from="." to="." method="_on_toggled"]
